Add code to write interpolated ENSO data to a Parquet file.

--- a/dataprep/enso_interpolation.ipynb
+++ b/dataprep/enso_interpolation.ipynb
@@ -95,6 +95,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "8fc4a464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enso_interpolated.write_parquet('../data/enso_interpolated.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "2579fbfd",
    "metadata": {},
