:truck: Somente enso como variavel climatica.

--- a/dataprep/3_join_aggregate_data.ipynb
+++ b/dataprep/3_join_aggregate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "744025be",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "5663f94a",
    "metadata": {},
    "outputs": [],
@@ -47,17 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "5e02d502",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data.join(enso, on='date', how='left').join(geo_uf, on='uf', how='left')"
+    "data = data.join(enso[['date','enso']], on='date', how='left').join(geo_uf, on='uf', how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "89a04693",
    "metadata": {},
    "outputs": [],
