:truck: Ajustando o post-processing

--- a/train_model/train.ipynb
+++ b/train_model/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 191,
    "id": "d2d99a61",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 192,
    "id": "5c536a46",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 193,
    "id": "fb6c13c9",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 195,
    "id": "015483ae",
    "metadata": {},
    "outputs": [
@@ -101,9 +101,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small3\"\n",
       "Beginning AutoGluon training...\n",
-      "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3'\n",
+      "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small1'\n",
       "=================== System Info ===================\n",
       "AutoGluon Version:  1.4.0\n",
       "Python Version:     3.11.11\n",
@@ -112,8 +111,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       4.36 GB / 16.00 GB (27.3%)\n",
-      "Disk Space Avail:   379.58 GB / 926.35 GB (41.0%)\n",
+      "Memory Avail:       4.21 GB / 16.00 GB (26.3%)\n",
+      "Disk Space Avail:   379.38 GB / 926.35 GB (41.0%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -134,7 +133,7 @@
       " 'verbosity': 2}\n",
       "\n",
       "Inferred time series frequency: 'W-SUN'\n",
-      "Provided train_data has 19630 rows, 26 time series. Median time series length is 755 (min=755, max=755). \n",
+      "Provided train_data has 16926 rows, 26 time series. Median time series length is 651 (min=651, max=651). \n",
       "\n",
       "Provided data contains following columns:\n",
       "\ttarget: 'target'\n",
@@ -151,16 +150,75 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 03:11:55\n",
+      "Starting training. Start time is 2025-07-31 03:14:06\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
-      "\t-0.7556       = Validation score (-WQL)\n",
+      "\t-0.6566       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t2.30    s     = Validation (prediction) runtime\n",
+      "\t2.26    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 2.31 s\n",
+      "Total runtime: 2.28 s\n",
       "Best model: Chronos[bolt_small]\n",
-      "Best model score: -0.7556\n",
+      "Best model score: -0.6566\n",
+      "Beginning AutoGluon training...\n",
+      "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small2'\n",
+      "=================== System Info ===================\n",
+      "AutoGluon Version:  1.4.0\n",
+      "Python Version:     3.11.11\n",
+      "Operating System:   Darwin\n",
+      "Platform Machine:   arm64\n",
+      "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
+      "CPU Count:          8\n",
+      "GPU Count:          1\n",
+      "Memory Avail:       4.28 GB / 16.00 GB (26.8%)\n",
+      "Disk Space Avail:   379.22 GB / 926.35 GB (40.9%)\n",
+      "===================================================\n",
+      "\n",
+      "Fitting with arguments:\n",
+      "{'enable_ensemble': False,\n",
+      " 'eval_metric': WQL,\n",
+      " 'hyperparameters': {'Chronos': [{'ag_args': {'name_suffix': ''},\n",
+      "                                  'fine_tune': False,\n",
+      "                                  'model_path': 'bolt_small'}]},\n",
+      " 'known_covariates_names': [],\n",
+      " 'num_val_windows': 1,\n",
+      " 'prediction_length': 68,\n",
+      " 'quantile_levels': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
+      " 'random_seed': 123,\n",
+      " 'refit_every_n_windows': 1,\n",
+      " 'refit_full': False,\n",
+      " 'skip_model_selection': False,\n",
+      " 'target': 'target',\n",
+      " 'verbosity': 2}\n",
+      "\n",
+      "Inferred time series frequency: 'W-SUN'\n",
+      "Provided train_data has 18278 rows, 26 time series. Median time series length is 703 (min=703, max=703). \n",
+      "\n",
+      "Provided data contains following columns:\n",
+      "\ttarget: 'target'\n",
+      "\tpast_covariates:\n",
+      "\t\tcategorical:        []\n",
+      "\t\tcontinuous (float): ['enso', 'log_casos']\n",
+      "\tstatic_features:\n",
+      "\t\tcategorical:        []\n",
+      "\t\tcontinuous (float): ['uf_latitude', 'uf_longitude']\n",
+      "\n",
+      "To learn how to fix incorrectly inferred types, please see documentation for TimeSeriesPredictor.fit\n",
+      "\n",
+      "AutoGluon will gauge predictive performance using evaluation metric: 'WQL'\n",
+      "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
+      "===================================================\n",
+      "\n",
+      "Starting training. Start time is 2025-07-31 03:14:10\n",
+      "Models that will be trained: ['Chronos[bolt_small]']\n",
+      "Training timeseries model Chronos[bolt_small]. \n",
+      "\t-0.6093       = Validation score (-WQL)\n",
+      "\t0.01    s     = Training runtime\n",
+      "\t1.85    s     = Validation (prediction) runtime\n",
+      "Training complete. Models trained: ['Chronos[bolt_small]']\n",
+      "Total runtime: 1.87 s\n",
+      "Best model: Chronos[bolt_small]\n",
+      "Best model score: -0.6093\n",
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small3\"\n",
       "Beginning AutoGluon training...\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3'\n",
@@ -173,7 +231,7 @@
       "CPU Count:          8\n",
       "GPU Count:          1\n",
       "Memory Avail:       4.25 GB / 16.00 GB (26.6%)\n",
-      "Disk Space Avail:   379.50 GB / 926.35 GB (41.0%)\n",
+      "Disk Space Avail:   379.07 GB / 926.35 GB (40.9%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -211,74 +269,14 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 03:11:59\n",
+      "Starting training. Start time is 2025-07-31 03:14:14\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
       "\t-0.7556       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t2.17    s     = Validation (prediction) runtime\n",
+      "\t1.91    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 2.19 s\n",
-      "Best model: Chronos[bolt_small]\n",
-      "Best model score: -0.7556\n",
-      "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small3\"\n",
-      "Beginning AutoGluon training...\n",
-      "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3'\n",
-      "=================== System Info ===================\n",
-      "AutoGluon Version:  1.4.0\n",
-      "Python Version:     3.11.11\n",
-      "Operating System:   Darwin\n",
-      "Platform Machine:   arm64\n",
-      "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
-      "CPU Count:          8\n",
-      "GPU Count:          1\n",
-      "Memory Avail:       4.21 GB / 16.00 GB (26.3%)\n",
-      "Disk Space Avail:   379.34 GB / 926.35 GB (40.9%)\n",
-      "===================================================\n",
-      "\n",
-      "Fitting with arguments:\n",
-      "{'enable_ensemble': False,\n",
-      " 'eval_metric': WQL,\n",
-      " 'hyperparameters': {'Chronos': [{'ag_args': {'name_suffix': ''},\n",
-      "                                  'fine_tune': False,\n",
-      "                                  'model_path': 'bolt_small'}]},\n",
-      " 'known_covariates_names': [],\n",
-      " 'num_val_windows': 1,\n",
-      " 'prediction_length': 68,\n",
-      " 'quantile_levels': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
-      " 'random_seed': 123,\n",
-      " 'refit_every_n_windows': 1,\n",
-      " 'refit_full': False,\n",
-      " 'skip_model_selection': False,\n",
-      " 'target': 'target',\n",
-      " 'verbosity': 2}\n",
-      "\n",
-      "Inferred time series frequency: 'W-SUN'\n",
-      "Provided train_data has 19630 rows, 26 time series. Median time series length is 755 (min=755, max=755). \n",
-      "\n",
-      "Provided data contains following columns:\n",
-      "\ttarget: 'target'\n",
-      "\tpast_covariates:\n",
-      "\t\tcategorical:        []\n",
-      "\t\tcontinuous (float): ['enso', 'log_casos']\n",
-      "\tstatic_features:\n",
-      "\t\tcategorical:        []\n",
-      "\t\tcontinuous (float): ['uf_latitude', 'uf_longitude']\n",
-      "\n",
-      "To learn how to fix incorrectly inferred types, please see documentation for TimeSeriesPredictor.fit\n",
-      "\n",
-      "AutoGluon will gauge predictive performance using evaluation metric: 'WQL'\n",
-      "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
-      "===================================================\n",
-      "\n",
-      "Starting training. Start time is 2025-07-31 03:12:03\n",
-      "Models that will be trained: ['Chronos[bolt_small]']\n",
-      "Training timeseries model Chronos[bolt_small]. \n",
-      "\t-0.7556       = Validation score (-WQL)\n",
-      "\t0.01    s     = Training runtime\n",
-      "\t1.87    s     = Validation (prediction) runtime\n",
-      "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.88 s\n",
+      "Total runtime: 1.92 s\n",
       "Best model: Chronos[bolt_small]\n",
       "Best model score: -0.7556\n"
      ]
@@ -286,9 +284,9 @@
    ],
    "source": [
     "for v in [1,2,3]:\n",
-    "    train, test = train_test_sprint_split(data,3)\n",
-    "    predictor = train_model(train,validation_set=3)\n",
-    "    validation =validation_sprint(data, train, predictor,validation_set=3)\n",
+    "    train, test = train_test_sprint_split(data,v)\n",
+    "    predictor = train_model(train,validation_set=v)\n",
+    "    validation =validation_sprint(data, train, predictor,validation_set=v)\n",
     "    validation.write_parquet('../data/4_model_output/validation_sprint_'+str(v)+'.parquet')"
    ]
   }
