:bug: Ajustando as datas de submissao da validacao 3. Note que as data vao alem do que tem no dataset original de dengue. Para isso, usamos o pacote epiweeks.

--- a/post_processing/post_processing.ipynb
+++ b/post_processing/post_processing.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "ae0f5514-285d-460b-8c49-3dc1e600ba35",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "e7484e87-2a6c-4ea1-b084-76879dca6df4",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "9e175edf-5c18-4c95-8145-00c7e7ce70e0",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "82d8bbaa",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "a3bcca7f-c168-40e6-972a-8ee9f2d5d840",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "6b48566c",
    "metadata": {},
    "outputs": [
@@ -191,11 +191,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sz/kh2xcmy51n70hznv18vzsqxr0000gn/T/ipykernel_91695/3687623414.py:22: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
+      "/var/folders/sz/kh2xcmy51n70hznv18vzsqxr0000gn/T/ipykernel_91695/74295172.py:11: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
       "  pred = predictions.with_columns(\n",
-      "/var/folders/sz/kh2xcmy51n70hznv18vzsqxr0000gn/T/ipykernel_91695/3687623414.py:22: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
+      "/var/folders/sz/kh2xcmy51n70hznv18vzsqxr0000gn/T/ipykernel_91695/74295172.py:11: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
       "  pred = predictions.with_columns(\n",
-      "/var/folders/sz/kh2xcmy51n70hznv18vzsqxr0000gn/T/ipykernel_91695/3687623414.py:22: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
+      "/var/folders/sz/kh2xcmy51n70hznv18vzsqxr0000gn/T/ipykernel_91695/74295172.py:11: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
       "  pred = predictions.with_columns(\n"
      ]
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "44a53aed",
    "metadata": {},
    "outputs": [
@@ -253,8 +253,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "e6d2b543",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1_352, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lower_95</th><th>lower_90</th><th>lower_80</th><th>lower_50</th><th>pred</th><th>upper_50</th><th>upper_80</th><th>upper_90</th><th>upper_95</th><th>date</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>date</td></tr></thead><tbody><tr><td>0.0</td><td>0.0</td><td>0.0</td><td>300.25824</td><td>883.681641</td><td>1847.712769</td><td>3097.541016</td><td>3583.358276</td><td>3826.266907</td><td>2024-10-06</td></tr><tr><td>0.0</td><td>0.0</td><td>0.0</td><td>293.295593</td><td>1026.213379</td><td>2081.055725</td><td>3481.633301</td><td>4034.914307</td><td>4311.55481</td><td>2024-10-13</td></tr><tr><td>0.0</td><td>0.0</td><td>0.0</td><td>472.960297</td><td>1309.833984</td><td>2525.849731</td><td>4088.55957</td><td>4709.576538</td><td>5020.085022</td><td>2024-10-20</td></tr><tr><td>0.0</td><td>0.0</td><td>0.0</td><td>290.646362</td><td>1246.572144</td><td>2585.34668</td><td>4241.1875</td><td>4891.609375</td><td>5216.820312</td><td>2024-10-27</td></tr><tr><td>0.0</td><td>0.0</td><td>0.0</td><td>74.274414</td><td>991.160645</td><td>2346.397522</td><td>4127.862793</td><td>4828.927124</td><td>5179.45929</td><td>2024-11-03</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>0.112679</td><td>0.93573</td><td>2.581833</td><td>7.250656</td><td>15.457012</td><td>37.237107</td><td>78.097763</td><td>94.71961</td><td>103.030534</td><td>2025-08-31</td></tr><tr><td>0.0</td><td>0.314257</td><td>1.928154</td><td>6.517065</td><td>14.538601</td><td>35.776753</td><td>75.965096</td><td>92.429935</td><td>100.662355</td><td>2025-09-07</td></tr><tr><td>2.078912</td><td>2.644964</td><td>3.777069</td><td>7.562883</td><td>16.886108</td><td>34.062336</td><td>71.381462</td><td>87.126106</td><td>94.998428</td><td>2025-09-14</td></tr><tr><td>1.408588</td><td>2.153217</td><td>3.642475</td><td>7.5611</td><td>16.205784</td><td>33.513674</td><td>69.961571</td><td>84.907341</td><td>92.380226</td><td>2025-09-21</td></tr><tr><td>1.930403</td><td>2.583504</td><td>3.889706</td><td>8.168243</td><td>17.225212</td><td>33.957072</td><td>67.806389</td><td>81.780064</td><td>88.766901</td><td>2025-09-28</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1_352, 10)\n",
+       "┌──────────┬──────────┬──────────┬────────────┬───┬────────────┬───────────┬───────────┬───────────┐\n",
+       "│ lower_95 ┆ lower_90 ┆ lower_80 ┆ lower_50   ┆ … ┆ upper_80   ┆ upper_90  ┆ upper_95  ┆ date      │\n",
+       "│ ---      ┆ ---      ┆ ---      ┆ ---        ┆   ┆ ---        ┆ ---       ┆ ---       ┆ ---       │\n",
+       "│ f64      ┆ f64      ┆ f64      ┆ f64        ┆   ┆ f64        ┆ f64       ┆ f64       ┆ date      │\n",
+       "╞══════════╪══════════╪══════════╪════════════╪═══╪════════════╪═══════════╪═══════════╪═══════════╡\n",
+       "│ 0.0      ┆ 0.0      ┆ 0.0      ┆ 300.25824  ┆ … ┆ 3097.54101 ┆ 3583.3582 ┆ 3826.2669 ┆ 2024-10-0 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆ 6          ┆ 76        ┆ 07        ┆ 6         │\n",
+       "│ 0.0      ┆ 0.0      ┆ 0.0      ┆ 293.295593 ┆ … ┆ 3481.63330 ┆ 4034.9143 ┆ 4311.5548 ┆ 2024-10-1 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆ 1          ┆ 07        ┆ 1         ┆ 3         │\n",
+       "│ 0.0      ┆ 0.0      ┆ 0.0      ┆ 472.960297 ┆ … ┆ 4088.55957 ┆ 4709.5765 ┆ 5020.0850 ┆ 2024-10-2 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆ 38        ┆ 22        ┆ 0         │\n",
+       "│ 0.0      ┆ 0.0      ┆ 0.0      ┆ 290.646362 ┆ … ┆ 4241.1875  ┆ 4891.6093 ┆ 5216.8203 ┆ 2024-10-2 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆ 75        ┆ 12        ┆ 7         │\n",
+       "│ 0.0      ┆ 0.0      ┆ 0.0      ┆ 74.274414  ┆ … ┆ 4127.86279 ┆ 4828.9271 ┆ 5179.4592 ┆ 2024-11-0 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆ 3          ┆ 24        ┆ 9         ┆ 3         │\n",
+       "│ …        ┆ …        ┆ …        ┆ …          ┆ … ┆ …          ┆ …         ┆ …         ┆ …         │\n",
+       "│ 0.112679 ┆ 0.93573  ┆ 2.581833 ┆ 7.250656   ┆ … ┆ 78.097763  ┆ 94.71961  ┆ 103.03053 ┆ 2025-08-3 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆           ┆ 4         ┆ 1         │\n",
+       "│ 0.0      ┆ 0.314257 ┆ 1.928154 ┆ 6.517065   ┆ … ┆ 75.965096  ┆ 92.429935 ┆ 100.66235 ┆ 2025-09-0 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆           ┆ 5         ┆ 7         │\n",
+       "│ 2.078912 ┆ 2.644964 ┆ 3.777069 ┆ 7.562883   ┆ … ┆ 71.381462  ┆ 87.126106 ┆ 94.998428 ┆ 2025-09-1 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆           ┆           ┆ 4         │\n",
+       "│ 1.408588 ┆ 2.153217 ┆ 3.642475 ┆ 7.5611     ┆ … ┆ 69.961571  ┆ 84.907341 ┆ 92.380226 ┆ 2025-09-2 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆           ┆           ┆ 1         │\n",
+       "│ 1.930403 ┆ 2.583504 ┆ 3.889706 ┆ 8.168243   ┆ … ┆ 67.806389  ┆ 81.780064 ┆ 88.766901 ┆ 2025-09-2 │\n",
+       "│          ┆          ┆          ┆            ┆   ┆            ┆           ┆           ┆ 8         │\n",
+       "└──────────┴──────────┴──────────┴────────────┴───┴────────────┴───────────┴───────────┴───────────┘"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dc14517",
    "metadata": {},
    "outputs": [],
    "source": []
