--- a/train_model/train.ipynb
+++ b/train_model/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "d2d99a61",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,56 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import polars as pl\n",
-    "from autogluon.timeseries import TimeSeriesDataFrame, TimeSeriesPredictor"
+    "from autogluon.timeseries import TimeSeriesDataFrame, TimeSeriesPredictor\n",
+    "\n",
+    "from epiweeks import Week"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 317,
+   "id": "971520f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_epiweek_start_dates(start_week, end_week):\n",
+    "    week_dates = []\n",
+    "    epiweeks = []\n",
+    "    current_week = start_week\n",
+    "\n",
+    "    while True:\n",
+    "        week_dates.append(current_week.startdate())\n",
+    "        epiweeks.append(int(f\"{current_week.year}{current_week.week:02d}\"))\n",
+    "\n",
+    "        if current_week.year == end_week.year and current_week.week == end_week.week:\n",
+    "            break\n",
+    "\n",
+    "        next_date = current_week.startdate() + timedelta(days=7)\n",
+    "        current_week = Week.fromdate(next_date)\n",
+    "\n",
+    "    return pl.DataFrame({'date': week_dates, 'epiweek': epiweeks}).sort('date')\n",
+    "\n",
+    "# Validation set 1\n",
+    "start_week = Week(2022, 41)\n",
+    "end_week = Week(2023, 40)\n",
+    "validation_dates_1 = get_epiweek_start_dates(start_week, end_week)\n",
+    "\n",
+    "# Validation set 2\n",
+    "start_week = Week(2023, 41)\n",
+    "end_week = Week(2024, 40)\n",
+    "validation_dates_2 = get_epiweek_start_dates(start_week, end_week)\n",
+    "\n",
+    "# Validation set 3\n",
+    "start_week = Week(2024, 41)\n",
+    "end_week = Week(2025, 40)\n",
+    "validation_dates_3 = get_epiweek_start_dates(start_week, end_week)\n",
+    "\n",
+    "validation_date = {1: validation_dates_1, 2: validation_dates_2, 3: validation_dates_3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
    "id": "5c536a46",
    "metadata": {},
    "outputs": [],
@@ -33,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 319,
    "id": "fb6c13c9",
    "metadata": {},
    "outputs": [],
@@ -60,7 +104,7 @@
     "    return train,test\n",
     "\n",
     "def train_model(train, validation_set=1):\n",
-    "    prediction_length = 68\n",
+    "    prediction_length = 67\n",
     "    predictor = TimeSeriesPredictor(\n",
     "        prediction_length=prediction_length,\n",
     "        path='./SprintModels/chronos_bolt_small'+str(validation_set)\n",
@@ -77,23 +121,23 @@
     "    )\n",
     "    return predictor\n",
     "\n",
-    "def validation_sprint(data, train, predictor, validation_set=1):\n",
+    "def validation_sprint(validation_dates, train, predictor, validation_set=1):\n",
     "    predictions = predictor.predict(data=train,model='Chronos[bolt_small]')\n",
     "\n",
-    "    dates_target =data.filter(pl.col('target_'+str(validation_set)))[['date','epiweek', 'target_'+str(validation_set)]].unique().sort('date')\n",
+    "    # dates_target =data.filter(pl.col('target_'+str(validation_set)))[['date','epiweek', 'target_'+str(validation_set)]].unique().sort('date')\n",
     "    validation = pl.DataFrame(predictions.reset_index()).rename({'item_id': 'uf','timestamp': 'date'})\n",
     "\n",
     "    validation = validation.with_columns(\n",
     "        pl.col('date').dt.date().alias('date')\n",
     "    )\n",
     "\n",
-    "    validation = validation.join(dates_target, on='date', how='left').filter(pl.col('epiweek').is_not_null())\n",
+    "    validation = validation.join(validation_dates, on='date', how='left').filter(pl.col('epiweek').is_not_null())\n",
     "    return validation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 321,
    "id": "015483ae",
    "metadata": {},
    "outputs": [
@@ -101,7 +145,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Beginning AutoGluon training...\n",
+      "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small1\"\n",
+      "Beginning AutoGluon training...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small1'\n",
       "=================== System Info ===================\n",
       "AutoGluon Version:  1.4.0\n",
@@ -111,8 +162,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       4.21 GB / 16.00 GB (26.3%)\n",
-      "Disk Space Avail:   379.38 GB / 926.35 GB (41.0%)\n",
+      "Memory Avail:       4.04 GB / 16.00 GB (25.3%)\n",
+      "Disk Space Avail:   378.27 GB / 926.35 GB (40.8%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -123,7 +174,7 @@
       "                                  'model_path': 'bolt_small'}]},\n",
       " 'known_covariates_names': [],\n",
       " 'num_val_windows': 1,\n",
-      " 'prediction_length': 68,\n",
+      " 'prediction_length': 67,\n",
       " 'quantile_levels': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
       " 'random_seed': 123,\n",
       " 'refit_every_n_windows': 1,\n",
@@ -150,16 +201,17 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 03:14:06\n",
+      "Starting training. Start time is 2025-07-31 05:29:05\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
-      "\t-0.6566       = Validation score (-WQL)\n",
+      "\t-0.6745       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t2.26    s     = Validation (prediction) runtime\n",
+      "\t2.40    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 2.28 s\n",
+      "Total runtime: 2.43 s\n",
       "Best model: Chronos[bolt_small]\n",
-      "Best model score: -0.6566\n",
+      "Best model score: -0.6745\n",
+      "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small2\"\n",
       "Beginning AutoGluon training...\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small2'\n",
       "=================== System Info ===================\n",
@@ -170,8 +222,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       4.28 GB / 16.00 GB (26.8%)\n",
-      "Disk Space Avail:   379.22 GB / 926.35 GB (40.9%)\n",
+      "Memory Avail:       3.72 GB / 16.00 GB (23.3%)\n",
+      "Disk Space Avail:   378.14 GB / 926.35 GB (40.8%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -182,7 +234,7 @@
       "                                  'model_path': 'bolt_small'}]},\n",
       " 'known_covariates_names': [],\n",
       " 'num_val_windows': 1,\n",
-      " 'prediction_length': 68,\n",
+      " 'prediction_length': 67,\n",
       " 'quantile_levels': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
       " 'random_seed': 123,\n",
       " 'refit_every_n_windows': 1,\n",
@@ -209,16 +261,16 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 03:14:10\n",
+      "Starting training. Start time is 2025-07-31 05:29:10\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
-      "\t-0.6093       = Validation score (-WQL)\n",
+      "\t-0.5642       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t1.85    s     = Validation (prediction) runtime\n",
+      "\t1.89    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.87 s\n",
+      "Total runtime: 1.90 s\n",
       "Best model: Chronos[bolt_small]\n",
-      "Best model score: -0.6093\n",
+      "Best model score: -0.5642\n",
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small3\"\n",
       "Beginning AutoGluon training...\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3'\n",
@@ -230,8 +282,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       4.25 GB / 16.00 GB (26.6%)\n",
-      "Disk Space Avail:   379.07 GB / 926.35 GB (40.9%)\n",
+      "Memory Avail:       3.71 GB / 16.00 GB (23.2%)\n",
+      "Disk Space Avail:   378.02 GB / 926.35 GB (40.8%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -242,7 +294,7 @@
       "                                  'model_path': 'bolt_small'}]},\n",
       " 'known_covariates_names': [],\n",
       " 'num_val_windows': 1,\n",
-      " 'prediction_length': 68,\n",
+      " 'prediction_length': 67,\n",
       " 'quantile_levels': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
       " 'random_seed': 123,\n",
       " 'refit_every_n_windows': 1,\n",
@@ -269,16 +321,16 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 03:14:14\n",
+      "Starting training. Start time is 2025-07-31 05:29:14\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
-      "\t-0.7556       = Validation score (-WQL)\n",
+      "\t-0.7540       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t1.91    s     = Validation (prediction) runtime\n",
+      "\t1.85    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.92 s\n",
+      "Total runtime: 1.86 s\n",
       "Best model: Chronos[bolt_small]\n",
-      "Best model score: -0.7556\n"
+      "Best model score: -0.7540\n"
      ]
     }
    ],
@@ -286,8 +338,23 @@
     "for v in [1,2,3]:\n",
     "    train, test = train_test_sprint_split(data,v)\n",
     "    predictor = train_model(train,validation_set=v)\n",
-    "    validation =validation_sprint(data, train, predictor,validation_set=v)\n",
+    "    validation =validation_sprint(validation_date[v], train, predictor,validation_set=v)\n",
     "    validation.write_parquet('../data/4_model_output/validation_sprint_'+str(v)+'.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d79dc57f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(((data.filter(pl.col('target_1'))[['date']].sort(by='date').unique() == validation_dates_1['date']).to_numpy().all()))\n",
+    "print(((data.filter(pl.col('target_2'))[['date']].sort(by='date').unique() == validation_dates_2['date']).to_numpy().all()))\n",
+    "\n",
+    "\n",
+    "max_date_v3 = data.filter(pl.col('target_3'))[['date']].sort(by='date').unique().max()[0].item()\n",
+    "((data.filter(pl.col('target_3'))[['date']].sort(by='date').unique() == validation_dates_3[['date']].filter(pl.col('date') <= max_date_v3)).to_numpy().all())"
    ]
   }
  ],
