--- a/train_model/train.ipynb
+++ b/train_model/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d2d99a61",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import polars as pl\n",
     "from autogluon.timeseries import TimeSeriesDataFrame, TimeSeriesPredictor\n",
     "\n",
+    "from datetime import timedelta\n",
     "from epiweeks import Week"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 5,
    "id": "971520f6",
    "metadata": {},
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 6,
    "id": "5c536a46",
    "metadata": {},
    "outputs": [],
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 7,
    "id": "fb6c13c9",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 8,
    "id": "015483ae",
    "metadata": {},
    "outputs": [
@@ -146,13 +147,7 @@
      "output_type": "stream",
      "text": [
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small1\"\n",
-      "Beginning AutoGluon training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Beginning AutoGluon training...\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small1'\n",
       "=================== System Info ===================\n",
       "AutoGluon Version:  1.4.0\n",
@@ -162,8 +157,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       4.04 GB / 16.00 GB (25.3%)\n",
-      "Disk Space Avail:   378.27 GB / 926.35 GB (40.8%)\n",
+      "Memory Avail:       4.10 GB / 16.00 GB (25.6%)\n",
+      "Disk Space Avail:   378.45 GB / 926.35 GB (40.9%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -201,14 +196,14 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 05:29:05\n",
+      "Starting training. Start time is 2025-07-31 05:40:21\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
       "\t-0.6745       = Validation score (-WQL)\n",
-      "\t0.01    s     = Training runtime\n",
-      "\t2.40    s     = Validation (prediction) runtime\n",
+      "\t1.70    s     = Training runtime\n",
+      "\t2.28    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 2.43 s\n",
+      "Total runtime: 3.99 s\n",
       "Best model: Chronos[bolt_small]\n",
       "Best model score: -0.6745\n",
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small2\"\n",
@@ -222,8 +217,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       3.72 GB / 16.00 GB (23.3%)\n",
-      "Disk Space Avail:   378.14 GB / 926.35 GB (40.8%)\n",
+      "Memory Avail:       3.84 GB / 16.00 GB (24.0%)\n",
+      "Disk Space Avail:   378.27 GB / 926.35 GB (40.8%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -261,14 +256,14 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 05:29:10\n",
+      "Starting training. Start time is 2025-07-31 05:40:27\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
       "\t-0.5642       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t1.89    s     = Validation (prediction) runtime\n",
+      "\t1.81    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.90 s\n",
+      "Total runtime: 1.83 s\n",
       "Best model: Chronos[bolt_small]\n",
       "Best model score: -0.5642\n",
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small3\"\n",
@@ -282,8 +277,8 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       3.71 GB / 16.00 GB (23.2%)\n",
-      "Disk Space Avail:   378.02 GB / 926.35 GB (40.8%)\n",
+      "Memory Avail:       3.73 GB / 16.00 GB (23.3%)\n",
+      "Disk Space Avail:   378.16 GB / 926.35 GB (40.8%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
@@ -321,14 +316,14 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 05:29:14\n",
+      "Starting training. Start time is 2025-07-31 05:40:31\n",
       "Models that will be trained: ['Chronos[bolt_small]']\n",
       "Training timeseries model Chronos[bolt_small]. \n",
       "\t-0.7540       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t1.85    s     = Validation (prediction) runtime\n",
+      "\t1.87    s     = Validation (prediction) runtime\n",
       "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.86 s\n",
+      "Total runtime: 1.89 s\n",
       "Best model: Chronos[bolt_small]\n",
       "Best model score: -0.7540\n"
      ]
@@ -344,10 +339,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d79dc57f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(((data.filter(pl.col('target_1'))[['date']].sort(by='date').unique() == validation_dates_1['date']).to_numpy().all()))\n",
     "print(((data.filter(pl.col('target_2'))[['date']].sort(by='date').unique() == validation_dates_2['date']).to_numpy().all()))\n",
