:garbage: Velhos notebooks de exploracao

--- a/old_exploration/aws_mosqlimate_logscale.ipynb
+++ b/old_exploration/aws_mosqlimate_logscale.ipynb
@@ -414,78 +414,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "id": "3453c7cf-2db0-41c8-b60e-c9d49af633c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>0.1</th>\n",
-       "      <th>0.2</th>\n",
-       "      <th>0.3</th>\n",
-       "      <th>0.4</th>\n",
-       "      <th>0.5</th>\n",
-       "      <th>0.6</th>\n",
-       "      <th>0.7</th>\n",
-       "      <th>0.8</th>\n",
-       "      <th>0.9</th>\n",
-       "      <th>mono</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>item_id</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty TimeSeriesDataFrame\n",
-       "Columns: [mean, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, mono]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predictions[~predictions['mono']]"
+    "# predictions[~predictions['mono']]"
    ]
   },
   {
