:sparkles: Codigo para obter hash do commit na hora da submissao.

--- a/post_processing/submission.ipynb
+++ b/post_processing/submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "34ba069b",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,26 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "import mosqlient as mosq\n",
+    "import subprocess\n",
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
     "# Access the environment variables\n",
-    "api_key = os.getenv('API_KEY')"
+    "api_key = os.getenv('API_KEY')\n",
+    "\n",
+    "def get_git_commit_hash():\n",
+    "    try:\n",
+    "        commit_hash = subprocess.check_output(['git', 'rev-parse', 'HEAD'], cwd=os.path.dirname(os.path.abspath(__file__))).decode('ascii').strip()\n",
+    "    except Exception:\n",
+    "        # fallback: try from current working directory\n",
+    "        try:\n",
+    "            commit_hash = subprocess.check_output(['git', 'rev-parse', 'HEAD']).decode('ascii').strip()\n",
+    "        except Exception:\n",
+    "            commit_hash = None\n",
+    "    return commit_hash\n",
+    "\n",
+    "COMMIT = get_git_commit_hash()"
    ]
   },
   {
@@ -82,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0f34c450",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_id = 133"
+    "model_id = 133\n"
    ]
   },
   {
@@ -106,11 +120,19 @@
     "                    model_id = model_id, \n",
     "                    description = f'Validation set {i} for {uf} using Chronos-Bolt', \n",
     "                    commit = COMMIT,\n",
-    "                    predict_date = '2025-05-21', \n",
+    "                    predict_date = '2025-07-31', \n",
     "                    prediction = df,\n",
     "                    adm_1=uf,\n",
     "                    api_key = api_key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91cd7f98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
