--- a/train_model/train.ipynb
+++ b/train_model/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "d2d99a61",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "971520f6",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "5c536a46",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "fb6c13c9",
    "metadata": {},
    "outputs": [],
@@ -113,12 +113,12 @@
     "        train_data=train,\n",
     "        hyperparameters={\n",
     "            \"Chronos\": [\n",
-    "                # {\"model_path\": \"bolt_small\", \"fine_tune\": True, \"ag_args\": {\"name_suffix\": \"\"}},\n",
-    "                {\"model_path\": \"bolt_small\", \"fine_tune\": False, \"ag_args\": {\"name_suffix\": \"\"}},\n",
+    "                {\"model_path\": \"bolt_small\", \"fine_tune\": True, \"ag_args\": {\"name_suffix\": \"\"}},\n",
+    "                {\"model_path\": \"bolt_small\", \"fine_tune\": False, \"ag_args\": {\"name_suffix\": \"zero\"}},\n",
     "            ]\n",
     "        },\n",
-    "        # time_limit=5,  # time limit in seconds\n",
-    "        enable_ensemble=False,\n",
+    "        time_limit=60,  # time limit in seconds\n",
+    "        enable_ensemble=True,\n",
     "    )\n",
     "    return predictor\n",
     "\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "015483ae",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small1\"\n",
-      "Beginning AutoGluon training...\n",
+      "Beginning AutoGluon training... Time limit = 60s\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small1'\n",
       "=================== System Info ===================\n",
       "AutoGluon Version:  1.4.0\n",
@@ -157,14 +157,17 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       4.10 GB / 16.00 GB (25.6%)\n",
-      "Disk Space Avail:   378.45 GB / 926.35 GB (40.9%)\n",
+      "Memory Avail:       3.77 GB / 16.00 GB (23.6%)\n",
+      "Disk Space Avail:   381.43 GB / 926.35 GB (41.2%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
-      "{'enable_ensemble': False,\n",
+      "{'enable_ensemble': True,\n",
       " 'eval_metric': WQL,\n",
       " 'hyperparameters': {'Chronos': [{'ag_args': {'name_suffix': ''},\n",
+      "                                  'fine_tune': True,\n",
+      "                                  'model_path': 'bolt_small'},\n",
+      "                                 {'ag_args': {'name_suffix': 'zero'},\n",
       "                                  'fine_tune': False,\n",
       "                                  'model_path': 'bolt_small'}]},\n",
       " 'known_covariates_names': [],\n",
@@ -176,6 +179,7 @@
       " 'refit_full': False,\n",
       " 'skip_model_selection': False,\n",
       " 'target': 'target',\n",
+      " 'time_limit': 60,\n",
       " 'verbosity': 2}\n",
       "\n",
       "Inferred time series frequency: 'W-SUN'\n",
@@ -196,18 +200,29 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 05:40:21\n",
-      "Models that will be trained: ['Chronos[bolt_small]']\n",
-      "Training timeseries model Chronos[bolt_small]. \n",
+      "Starting training. Start time is 2025-07-31 19:51:49\n",
+      "Models that will be trained: ['Chronos[bolt_small]', 'Chronoszero[bolt_small]']\n",
+      "Training timeseries model Chronos[bolt_small]. Training for up to 20.0s of the 60.0s of remaining time.\n",
+      "\tFine-tuning on the CPU detected. We recommend using a GPU for faster fine-tuning of Chronos.\n",
+      "\tSaving fine-tuned model to /Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small1/models/Chronos[bolt_small]/W0/fine-tuned-ckpt\n",
+      "\t-0.6888       = Validation score (-WQL)\n",
+      "\t17.96   s     = Training runtime\n",
+      "\t0.92    s     = Validation (prediction) runtime\n",
+      "Training timeseries model Chronoszero[bolt_small]. Training for up to 20.5s of the 41.1s of remaining time.\n",
       "\t-0.6745       = Validation score (-WQL)\n",
-      "\t1.70    s     = Training runtime\n",
-      "\t2.28    s     = Validation (prediction) runtime\n",
-      "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 3.99 s\n",
-      "Best model: Chronos[bolt_small]\n",
+      "\t0.01    s     = Training runtime\n",
+      "\t2.23    s     = Validation (prediction) runtime\n",
+      "Fitting simple weighted ensemble.\n",
+      "\tEnsemble weights: {'Chronos[bolt_small]': 0.05, 'Chronoszero[bolt_small]': 0.95}\n",
+      "\t-0.6745       = Validation score (-WQL)\n",
+      "\t0.10    s     = Training runtime\n",
+      "\t3.15    s     = Validation (prediction) runtime\n",
+      "Training complete. Models trained: ['Chronos[bolt_small]', 'Chronoszero[bolt_small]', 'WeightedEnsemble']\n",
+      "Total runtime: 21.26 s\n",
+      "Best model: WeightedEnsemble\n",
       "Best model score: -0.6745\n",
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small2\"\n",
-      "Beginning AutoGluon training...\n",
+      "Beginning AutoGluon training... Time limit = 60s\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small2'\n",
       "=================== System Info ===================\n",
       "AutoGluon Version:  1.4.0\n",
@@ -217,14 +232,17 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       3.84 GB / 16.00 GB (24.0%)\n",
-      "Disk Space Avail:   378.27 GB / 926.35 GB (40.8%)\n",
+      "Memory Avail:       3.13 GB / 16.00 GB (19.6%)\n",
+      "Disk Space Avail:   382.36 GB / 926.35 GB (41.3%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
-      "{'enable_ensemble': False,\n",
+      "{'enable_ensemble': True,\n",
       " 'eval_metric': WQL,\n",
       " 'hyperparameters': {'Chronos': [{'ag_args': {'name_suffix': ''},\n",
+      "                                  'fine_tune': True,\n",
+      "                                  'model_path': 'bolt_small'},\n",
+      "                                 {'ag_args': {'name_suffix': 'zero'},\n",
       "                                  'fine_tune': False,\n",
       "                                  'model_path': 'bolt_small'}]},\n",
       " 'known_covariates_names': [],\n",
@@ -236,6 +254,7 @@
       " 'refit_full': False,\n",
       " 'skip_model_selection': False,\n",
       " 'target': 'target',\n",
+      " 'time_limit': 60,\n",
       " 'verbosity': 2}\n",
       "\n",
       "Inferred time series frequency: 'W-SUN'\n",
@@ -256,18 +275,29 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 05:40:27\n",
-      "Models that will be trained: ['Chronos[bolt_small]']\n",
-      "Training timeseries model Chronos[bolt_small]. \n",
+      "Starting training. Start time is 2025-07-31 19:52:11\n",
+      "Models that will be trained: ['Chronos[bolt_small]', 'Chronoszero[bolt_small]']\n",
+      "Training timeseries model Chronos[bolt_small]. Training for up to 20.0s of the 60.0s of remaining time.\n",
+      "\tFine-tuning on the CPU detected. We recommend using a GPU for faster fine-tuning of Chronos.\n",
+      "\tSaving fine-tuned model to /Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small2/models/Chronos[bolt_small]/W0/fine-tuned-ckpt\n",
+      "\t-0.5681       = Validation score (-WQL)\n",
+      "\t17.50   s     = Training runtime\n",
+      "\t1.09    s     = Validation (prediction) runtime\n",
+      "Training timeseries model Chronoszero[bolt_small]. Training for up to 20.7s of the 41.4s of remaining time.\n",
       "\t-0.5642       = Validation score (-WQL)\n",
       "\t0.01    s     = Training runtime\n",
-      "\t1.81    s     = Validation (prediction) runtime\n",
-      "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.83 s\n",
-      "Best model: Chronos[bolt_small]\n",
-      "Best model score: -0.5642\n",
+      "\t2.01    s     = Validation (prediction) runtime\n",
+      "Fitting simple weighted ensemble.\n",
+      "\tEnsemble weights: {'Chronos[bolt_small]': 0.47, 'Chronoszero[bolt_small]': 0.53}\n",
+      "\t-0.5593       = Validation score (-WQL)\n",
+      "\t0.12    s     = Training runtime\n",
+      "\t3.09    s     = Validation (prediction) runtime\n",
+      "Training complete. Models trained: ['Chronos[bolt_small]', 'Chronoszero[bolt_small]', 'WeightedEnsemble']\n",
+      "Total runtime: 20.75 s\n",
+      "Best model: WeightedEnsemble\n",
+      "Best model score: -0.5593\n",
       "Warning: path already exists! This predictor may overwrite an existing predictor! path=\"./SprintModels/chronos_bolt_small3\"\n",
-      "Beginning AutoGluon training...\n",
+      "Beginning AutoGluon training... Time limit = 60s\n",
       "AutoGluon will save models to '/Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3'\n",
       "=================== System Info ===================\n",
       "AutoGluon Version:  1.4.0\n",
@@ -277,14 +307,17 @@
       "Platform Version:   Darwin Kernel Version 24.5.0: Tue Apr 22 19:54:33 PDT 2025; root:xnu-11417.121.6~2/RELEASE_ARM64_T8122\n",
       "CPU Count:          8\n",
       "GPU Count:          1\n",
-      "Memory Avail:       3.73 GB / 16.00 GB (23.3%)\n",
-      "Disk Space Avail:   378.16 GB / 926.35 GB (40.8%)\n",
+      "Memory Avail:       2.94 GB / 16.00 GB (18.4%)\n",
+      "Disk Space Avail:   381.54 GB / 926.35 GB (41.2%)\n",
       "===================================================\n",
       "\n",
       "Fitting with arguments:\n",
-      "{'enable_ensemble': False,\n",
+      "{'enable_ensemble': True,\n",
       " 'eval_metric': WQL,\n",
       " 'hyperparameters': {'Chronos': [{'ag_args': {'name_suffix': ''},\n",
+      "                                  'fine_tune': True,\n",
+      "                                  'model_path': 'bolt_small'},\n",
+      "                                 {'ag_args': {'name_suffix': 'zero'},\n",
       "                                  'fine_tune': False,\n",
       "                                  'model_path': 'bolt_small'}]},\n",
       " 'known_covariates_names': [],\n",
@@ -296,6 +329,7 @@
       " 'refit_full': False,\n",
       " 'skip_model_selection': False,\n",
       " 'target': 'target',\n",
+      " 'time_limit': 60,\n",
       " 'verbosity': 2}\n",
       "\n",
       "Inferred time series frequency: 'W-SUN'\n",
@@ -316,30 +350,70 @@
       "\tThis metric's sign has been flipped to adhere to being higher_is_better. The metric score can be multiplied by -1 to get the metric value.\n",
       "===================================================\n",
       "\n",
-      "Starting training. Start time is 2025-07-31 05:40:31\n",
-      "Models that will be trained: ['Chronos[bolt_small]']\n",
-      "Training timeseries model Chronos[bolt_small]. \n",
+      "Starting training. Start time is 2025-07-31 19:52:32\n",
+      "Models that will be trained: ['Chronos[bolt_small]', 'Chronoszero[bolt_small]']\n",
+      "Training timeseries model Chronos[bolt_small]. Training for up to 20.0s of the 60.0s of remaining time.\n",
+      "\tFine-tuning on the CPU detected. We recommend using a GPU for faster fine-tuning of Chronos.\n",
+      "\tSaving fine-tuned model to /Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3/models/Chronos[bolt_small]/W0/fine-tuned-ckpt\n",
+      "\t-0.7970       = Validation score (-WQL)\n",
+      "\t17.24   s     = Training runtime\n",
+      "\t1.08    s     = Validation (prediction) runtime\n",
+      "Training timeseries model Chronoszero[bolt_small]. Training for up to 20.8s of the 41.7s of remaining time.\n",
       "\t-0.7540       = Validation score (-WQL)\n",
-      "\t0.01    s     = Training runtime\n",
-      "\t1.87    s     = Validation (prediction) runtime\n",
-      "Training complete. Models trained: ['Chronos[bolt_small]']\n",
-      "Total runtime: 1.89 s\n",
-      "Best model: Chronos[bolt_small]\n",
+      "\t0.02    s     = Training runtime\n",
+      "\t2.34    s     = Validation (prediction) runtime\n",
+      "Fitting simple weighted ensemble.\n",
+      "\tEnsemble weights: {'Chronoszero[bolt_small]': 1.0}\n",
+      "\t-0.7540       = Validation score (-WQL)\n",
+      "\t0.15    s     = Training runtime\n",
+      "\t2.34    s     = Validation (prediction) runtime\n",
+      "Training complete. Models trained: ['Chronos[bolt_small]', 'Chronoszero[bolt_small]', 'WeightedEnsemble']\n",
+      "Total runtime: 20.86 s\n",
+      "Best model: Chronoszero[bolt_small]\n",
       "Best model score: -0.7540\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train models\n",
+    "for v in [1,2,3]:\n",
+    "    train, test = train_test_sprint_split(data,v)\n",
+    "    predictor = train_model(train,validation_set=v)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "86c1bb70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading predictor from path /Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading predictor from path /Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small2\n",
+      "Loading predictor from path /Users/davibarreira/Documents/DSProjects/Mosqlimate/jbd-mosqlimate-sprint/train_model/SprintModels/chronos_bolt_small3\n"
      ]
     }
    ],
    "source": [
     "for v in [1,2,3]:\n",
     "    train, test = train_test_sprint_split(data,v)\n",
-    "    predictor = train_model(train,validation_set=v)\n",
+    "    predictor =TimeSeriesPredictor.load('../train_model/SprintModels/chronos_bolt_small'+str(v))\n",
     "    validation =validation_sprint(validation_date[v], train, predictor,validation_set=v)\n",
     "    validation.write_parquet('../data/4_model_output/validation_sprint_'+str(v)+'.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "d79dc57f",
    "metadata": {},
    "outputs": [
@@ -357,7 +431,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,6 +444,14 @@
     "max_date_v3 = data.filter(pl.col('target_3'))[['date']].sort(by='date').unique().max()[0].item()\n",
     "((data.filter(pl.col('target_3'))[['date']].sort(by='date').unique() == validation_dates_3[['date']].filter(pl.col('date') <= max_date_v3)).to_numpy().all())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5509d6bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
