:truck: Estruturando repo.

--- a/post_processing/submission.ipynb
+++ b/post_processing/submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "34ba069b",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4efcf128",
    "metadata": {},
    "outputs": [
@@ -77,26 +77,26 @@
     "time_resolution = \"week\"\n",
     "sprint = True\n",
     "\n",
-    "model = mosq.upload_model(\n",
-    "    api_key=api_key,\n",
-    "    name=name,\n",
-    "    description=description,\n",
-    "    repository=repository,\n",
-    "    implementation_language=implementation_language,\n",
-    "    disease=disease,\n",
-    "    temporal=temporal,\n",
-    "    spatial=spatial,\n",
-    "    categorical=categorical,\n",
-    "    adm_level=adm_level,\n",
-    "    time_resolution=time_resolution,\n",
-    "    sprint=sprint\n",
-    ")\n",
-    "model.dict()"
+    "# model = mosq.upload_model(\n",
+    "#     api_key=api_key,\n",
+    "#     name=name,\n",
+    "#     description=description,\n",
+    "#     repository=repository,\n",
+    "#     implementation_language=implementation_language,\n",
+    "#     disease=disease,\n",
+    "#     temporal=temporal,\n",
+    "#     spatial=spatial,\n",
+    "#     categorical=categorical,\n",
+    "#     adm_level=adm_level,\n",
+    "#     time_resolution=time_resolution,\n",
+    "#     sprint=sprint\n",
+    "# )\n",
+    "# model.dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0f34c450",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "55f143c1",
    "metadata": {},
    "outputs": [],
@@ -125,14 +125,6 @@
     "                    adm_1=uf,\n",
     "                    api_key = api_key)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91cd7f98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
